--- a/style.css
+++ b/style.css
@@ -16,3 +16,35 @@
 .explore_card_body {
     padding: 0.75rem;
 }
+
+.journey {
+    height: 280px;
+    max-width: 100%;
+    object-fit: cover;
+}
+
+.journey_card {
+    width: 30rem;
+    margin: 6px;
+}
+
+.journey_card_body {
+    padding: 0.75rem;
+}
+
+.center {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.view_food {
+    height: 160px;
+    max-width: 100%;
+    object-fit: cover;
+}
+
+.modal_picture {
+    padding: 6px;
+}
