--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 .food {
     height: 180px;
-    max-width: 100%;
+    width: 100%;
     object-fit: cover;
 }
 
@@ -40,8 +40,8 @@
 }
 
 .view_food {
-    height: 160px;
-    max-width: 100%;
+    height: 180px;
+    width: 100%;
     object-fit: cover;
 }
 
