--- a/style.css
+++ b/style.css
@@ -54,11 +54,11 @@
 .sidenav {
     height: 100%;
     /* Full-height: remove this if you want "auto" height */
-    width: 300px;
+    width: 320px;
     /* Set the width of the sidebar */
     position: fixed;
     /* Fixed Sidebar (stay in place on scroll) */
-    z-index: -1;
+    z-index: 1;
     /* Stay on top */
     top: 0;
     /* Stay at the top */
@@ -73,6 +73,10 @@
     overflow-x: hidden;
     /* Disable horizontal scroll */
     padding-top: 20px;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-bottom: 60px;
+
     margin-top: 50px;
 }
 
@@ -92,7 +96,7 @@
 
 /* Style page content */
 .main {
-    margin-left: 300px;
+    margin-left: 320px;
     /* Same as the width of the sidebar */
     padding: 0px 10px;
 }
@@ -106,4 +110,8 @@
     .sidenav a {
         font-size: 18px;
     }
+}
+
+.journeysContent {
+    margin-top: 70px;
 }
