--- a/style.css
+++ b/style.css
@@ -1,121 +1,122 @@
 .dark {
-    background-color: #222;
+  background-color: #222;
 }
 
 .food {
-    height: 180px;
-    width: 100%;
-    object-fit: cover;
+  height: 180px;
+  width: 100%;
+  object-fit: cover;
 }
 
 .explore_card {
-    width: 16rem;
-    margin: 6px;
+  width: 16rem;
+  margin: 6px;
 }
 
 .explore_card_body {
-    padding: 0.75rem;
+  padding: 0.75rem;
 }
 
 .journey {
-    height: 280px;
-    max-width: 100%;
-    object-fit: cover;
+  height: 280px;
+  max-width: 100%;
+  object-fit: cover;
 }
 
 .journey_card {
-    width: 30rem;
-    margin: 6px;
+  width: 30rem;
+  margin: 6px;
 }
 
 .journey_card_body {
-    padding: 0.75rem;
+  padding: 0.75rem;
 }
 
 .center {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .view_food {
-    height: 180px;
-    width: 100%;
-    object-fit: cover;
+  height: 180px;
+  width: 100%;
+  object-fit: cover;
 }
 
 .modal_picture {
-    padding: 6px;
+  padding: 6px;
 }
-
 
 /* The sidebar menu */
 .sidenav {
-    height: 100%;
-    /* Full-height: remove this if you want "auto" height */
-    width: 320px;
-    /* Set the width of the sidebar */
-    position: fixed;
-    /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1;
-    /* Stay on top */
-    top: 0;
-    /* Stay at the top */
-    left: 0;
-    border-style: solid;
-    border-color: #222;
-    border-top-width: 0px;
-    border-bottom-width: 0px;
-    border-left-width: 0px;
-    border-right-width: 5px;
-    /* Black */
-    overflow-x: hidden;
-    /* Disable horizontal scroll */
-    padding-top: 20px;
-    padding-left: 12px;
-    padding-right: 12px;
-    padding-bottom: 60px;
+  height: 100%;
+  /* Full-height: remove this if you want "auto" height */
+  width: 320px;
+  /* Set the width of the sidebar */
+  position: fixed;
+  /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1;
+  /* Stay on top */
+  top: 0;
+  /* Stay at the top */
+  left: 0;
+  border-style: solid;
+  border-color: #222;
+  border-top-width: 0px;
+  border-bottom-width: 0px;
+  border-left-width: 0px;
+  border-right-width: 5px;
+  /* Black */
+  overflow-x: hidden;
+  /* Disable horizontal scroll */
+  padding-top: 20px;
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-bottom: 100px;
 
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 /* The navigation menu links */
 .sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
 }
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
-    color: #f1f1f1;
+  color: #f1f1f1;
 }
 
 /* Style page content */
 .main {
-    margin-left: 320px;
-    /* Same as the width of the sidebar */
-    padding: 0px 10px;
+  margin-left: 320px;
+  /* Same as the width of the sidebar */
+  padding: 0px 10px;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
-    .sidenav {
-        padding-top: 15px;
-    }
+  .sidenav {
+    padding-top: 15px;
+  }
 
-    .sidenav a {
-        font-size: 18px;
-    }
+  .sidenav a {
+    font-size: 18px;
+  }
 }
 
 .journeysContent {
-    margin-top: 70px;
+  margin-top: 70px;
 }
 
 body {
-    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
 }
